[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hashir Mahmood", email = "hashir704x@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.14",
    "python-dotenv>=1.1.0",
]

[project.scripts]
hello-agent = "hello_agent:main"
say-hello = "hello_agent.agent_hello:helloAgent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
